// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageParser should parse JavaScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: comment

// This is a comment",
    "endLine": 1,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "comment",
    "language": "javascript",
    "startLine": 1,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: import_statement

import { a } from 'b';",
    "endLine": 2,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "import_statement",
    "language": "javascript",
    "startLine": 2,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "62d83893874d1e8701dc414b00e8e52bcacf5b54fb31e216e283ec7235619c45",
    "containerPath": "",
    "content": "function myFunction() {
  console.log('hello');
}",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: function_declaration

function myFunction() {
  console.log('hello');
}",
    "endLine": 6,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "function_declaration",
    "language": "javascript",
    "startLine": 4,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "46289932de1604479260f0178bba3a5f7019d133b263efc139c9a18d856bebf1",
    "containerPath": "",
    "content": "console.log('hello')",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: call_expression

console.log('hello')",
    "endLine": 5,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "call_expression",
    "language": "javascript",
    "startLine": 5,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "endLine": 12,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "class_declaration",
    "language": "javascript",
    "startLine": 8,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/javascript.js
kind: lexical_declaration

const myVar = () => {};",
    "endLine": 14,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "lexical_declaration",
    "language": "javascript",
    "startLine": 14,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Markdown fixtures correctly 1`] = `
[
  {
    "chunk_hash": "ed09ca2736773c6ceb4e8e5499e71d1a80fd6a4a346efff7a88a2d6c3ff27274",
    "content": "# Markdown Fixture",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/markdown.md

# Markdown Fixture",
    "endLine": 1,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "152f882642f9c50be75eeade70c1ea1e2cfbe7901db4a0a46b2f9d25159c755f",
    "content": "This is a paragraph.",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/markdown.md

This is a paragraph.",
    "endLine": 3,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a71ffba5e7729a8faef7020e41476963c3a49ca90958e41ce8eb234ed005d08",
    "content": "## This is a heading",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/markdown.md

## This is a heading",
    "endLine": 5,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "startLine": 5,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "8dada63f9b5a079670e1e692f1790aa4334c5d920f6333a56d49d483eac7f42d",
    "content": "This is another paragraph.
",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/markdown.md

This is another paragraph.
",
    "endLine": 8,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "startLine": 7,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse TypeScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: comment

// This is a comment",
    "endLine": 1,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "comment",
    "language": "typescript",
    "startLine": 1,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: import_statement

import { a } from 'b';",
    "endLine": 2,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "import_statement",
    "language": "typescript",
    "startLine": 2,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "62d83893874d1e8701dc414b00e8e52bcacf5b54fb31e216e283ec7235619c45",
    "containerPath": "",
    "content": "function myFunction() {
  console.log('hello');
}",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: function_declaration

function myFunction() {
  console.log('hello');
}",
    "endLine": 6,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "function_declaration",
    "language": "typescript",
    "startLine": 4,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "46289932de1604479260f0178bba3a5f7019d133b263efc139c9a18d856bebf1",
    "containerPath": "",
    "content": "console.log('hello')",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: call_expression

console.log('hello')",
    "endLine": 5,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "call_expression",
    "language": "typescript",
    "startLine": 5,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "endLine": 12,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "class_declaration",
    "language": "typescript",
    "startLine": 8,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4f9ff60fb6e9d9218195c5b2af2e37c126497b9dbda6838356718ce7fe4d4b7a",
    "containerPath": "MyClass",
    "content": "myMethod() {
    return 1;
  }",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: method_definition
containerPath: MyClass

myMethod() {
    return 1;
  }",
    "endLine": 11,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "method_definition",
    "language": "typescript",
    "startLine": 9,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: lexical_declaration

const myVar = () => {};",
    "endLine": 14,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "lexical_declaration",
    "language": "typescript",
    "startLine": 14,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ffbaa67156c5c6797b6e979ae7b40d09c839ede749416ea15b140a5e806bdc14",
    "containerPath": "",
    "content": "type MyType = {
  name: string;
};",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: type_alias_declaration

type MyType = {
  name: string;
};",
    "endLine": 18,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "type_alias_declaration",
    "language": "typescript",
    "startLine": 16,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7c078235ad80c07bc55176f61a080b5dfc580d9c6db2f51138f43cef0620d72a",
    "containerPath": "",
    "content": "interface MyInterface {
  id: number;
}",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/typescript.ts
kind: interface_declaration

interface MyInterface {
  id: number;
}",
    "endLine": 22,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "interface_declaration",
    "language": "typescript",
    "startLine": 20,
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse YAML fixtures correctly 1`] =
[
  {
    "chunk_hash": "7faf28cc86373c82f34b2d4885392ed863a17a33a23fa5ef55caf75a9b798085",
    "content": "document: one",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

document: one",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "42b8143ee2f453a99da7d620fa6e4098ce5b58a81e47ee92787784673290acc1",
    "content": "pair:",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

pair:",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f61f046945e572e3c609093a9bb46677315f28cb523f1d4df55f2a96e8e00a10",
    "content": "  key: value",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

  key: value",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "546d6629778413283752817130f850389ab7f46b2a45ed5e9cd45a5e32ae18b0",
    "content": "document: two",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

document: two",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ac0cddc5cbd16b18271a122ebc7fd418edd369c3bb11e941a823acd63ea91b9c",
    "content": "another_pair:",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

another_pair:",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3255b416a16255d96420a3c3fbed1c6c8e36bb9929283c23d741904a51770ace",
    "content": "  nested_key: nested_value",
    "created_at": "[TIMESTAMP]",
    "embedding_text": "filePath: tests/fixtures/yaml.yml

  nested_key: nested_value",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;
